visual pronto, conexão com banco de dados e seus middlewares prontos e funcionando

--- a/src/app/conteudo-central/contato/contato.component.html
+++ b/src/app/conteudo-central/contato/contato.component.html
@@ -1,160 +1,31 @@
 <section>
-  <!--Avisos-->
   <div class="jumbotron texto-centralizado">
-    <h1 class="display-4">
-      Alterar os dados de contato e atendimento da empresa
-    </h1>
-
-    <hr class="my-4" />
-    <p>telefones de contato da empresa</p>
-    <input
-      *ngFor="let telefone of contato.telefones;
-      let i = index;
-      trackBy: trackByIndex"
-      type="text"
-      class="form-control"
-      placeholder="Insira aqui o texto"
-      aria-label="Insira aqui o texto"
-      aria-describedby="button-addon2"
-      [(ngModel)]="contato.telefones[i]"
-    />
-
-    <hr class="my-4" />
-    <p>horários de atendimento da empresa</p>
-    <input
-      type="text"
-      class="form-control"
-      placeholder="Insira aqui o texto"
-      aria-label="Insira aqui o texto"
-      aria-describedby="button-addon2"
-      [(ngModel)]="contato.atendimento.diaDaSemana"
-    />
-    <input
-      type="text"
-      class="form-control"
-      placeholder="Insira aqui o texto"
-      aria-label="Insira aqui o texto"
-      aria-describedby="button-addon2"
-      [(ngModel)]="contato.atendimento.horario"
-    />
-
-    <hr class="my-4" />
-    <p>endereço da empresa</p>
-    <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">Rua</span>
-        </div>
-        <input
-          type="text"
-          class="form-control"
-          placeholder="Insira aqui o texto"
-          aria-label="Rua"
-          aria-describedby="button-addon2"
-          [(ngModel)]="contato.endereco.rua"
-        />
-      </div>
-    <hr class="my-4" />
-    <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">Numero</span>
-        </div>
-    <input
-      type="text"
-      class="form-control"
-      placeholder="Insira aqui o texto"
-      aria-label="Numero"
-      aria-describedby="button-addon2"
-      [(ngModel)]="contato.endereco.numero"
-    />
-    </div>
-    <hr class="my-4" />
-    <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">Bairro</span>
-        </div>
-    <input
-      type="text"
-      class="form-control"
-      placeholder="Insira aqui o texto"
-      aria-label="Bairro"
-      aria-describedby="button-addon2"
-      [(ngModel)]="contato.endereco.bairro"
-    />
-    </div>
-    <hr class="my-4" />
-    <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">CEP</span>
-        </div>
-    <input
-      type="text"
-      class="form-control"
-      placeholder="Insira aqui o texto"
-      aria-label="CEP"
-      aria-describedby="button-addon2"
-      [(ngModel)]="contato.endereco.cep"
-    />
-    </div>
-    <hr class="my-4" />
-    <div class="input-group">
-        <div class="input-group-prepend">
-          <span class="input-group-text">Estado</span>
-        </div>
-    <input
-      type="text"
-      class="form-control"
-      placeholder="Insira aqui o texto"
-      aria-label="Estado"
-      aria-describedby="button-addon2"
-      [(ngModel)]="contato.endereco.estado"
-    />
-    </div>
-    <hr class="my-4" />
-    <button
-      class="btn btn-primary btn-lg"
+      <button
+      [routerLink]="['mensagem']"
+      [queryParams]="{ pagina: 1 }"
+      [routerLinkActive]="'active'"
       type="button"
-      id="button-addon2"
-      (click)="setContato(id)"
-      data-toggle="modal"
-      data-target="#modalInformativo"
+      class="btn btn-primary btn-lg"
+      data-toggle="button"
+      aria-pressed="true"
+      autocomplete="off"
     >
-      Salvar alterações
+      Mensagens recebidas
     </button>
-  </div>
+    <button
+      [routerLink]="['controle-contato']"
+      [routerLinkActive]="'active'"
+      type="button"
+      class="btn btn-warning btn-lg"
+      data-toggle="button"
+      aria-pressed="true"
+      autocomplete="off"
+    >
+      Editar página de contato
+    </button>
+    </div>
 </section>
 
-<!--Modal-->
-<div
-  class="modal fade"
-  id="modalInformativo"
-  tabindex="-1"
-  role="dialog"
-  aria-labelledby="modalInformativoLabel"
-  aria-hidden="true"
->
-  <div class="modal-dialog" role="document">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="modalInformativoLabel">
-          Status da atualizacao:
-        </h5>
-        <button
-          type="button"
-          class="close"
-          data-dismiss="modal"
-          aria-label="Close"
-        >
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div class="modal-body">
-        {{ status }}
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-primary" data-dismiss="modal">
-          Fechar
-        </button>
-      </div>
-    </div>
-  </div>
-</div>
+<section>
+  <router-outlet></router-outlet>
+</section>
