--- a/src/app/menu-topo/menu-topo.component.scss
+++ b/src/app/menu-topo/menu-topo.component.scss
@@ -1,11 +1,3 @@
-.example-button-row button,
-.example-button-row a {
-  margin-right: 8px;
-}
-img {
-  margin: 0;
-  padding: 0;
-}
-.active {
-  color: red;
+.nav-link {
+  font-size: 1.5rem;
 }
